src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CompanyNumber__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Company Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>locale__c</fullName>
        <label>locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userIDChips__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Fields shows the user ID from Companies House API</description>
        <externalId>true</externalId>
        <inlineHelpText>Fields shows the user ID from Companies House API</inlineHelpText>
        <label>user ID chips</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>